--- a/report/style.css
+++ b/report/style.css
@@ -1,9 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body {
     font-family: Arial, sans-serif;
 }
@@ -20,14 +14,9 @@ main {
     padding: 20px;
 }
 
-.labs {
-    background-color: #f2f2f2;
-    padding: 20px;
-}
-
 .lab-report {
     background-color: #f2f2f2;
-    padding: 20px;
+    padding-inline: 20px;
 }
 
 .place-for-info {
@@ -38,12 +27,19 @@ main {
 
 ul {
     list-style-type: none;
+    margin: 0;
+    padding-left: 20px;
+}
+
+ul ul li {
+    background-color: #dcdcdc;
 }
 
 ul li {
     background-color: #e6e6e6;
     margin-bottom: 10px;
-    padding: 5px;
+    padding-inline: 15px;
+    padding-block: 1px;
 }
 
 .current-lab {
